--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,5 @@ script:
   #Test unitario y de integracion con cobertura (jacoco)
   - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
 
+  #SONARCLOUD
+  - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=nerok96 -Dsonar.login=$SONAR
